# ObjectCollision

./: BallCollision.sln  BallCollision.vcxproj  BallCollision.vcxproj.filters  CMakeLists.txt  CMakelists.txt  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  Entity.cpp  Entity.h  Shape.cpp  Shape.h  SimulationHandler.cpp  SimulationHandler.h  SpatialHash.cpp  SpatialHash.h  SpatialHashEntity.cpp  SpatialHashEntity.h  Utils.cpp  Utils.h  main.cpp  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
include/: Ball.h  CollisionDetector.h  config.h.in
src/: Ball.cpp  CollisionDetector.cpp  SpatialHash.cpp
